[update] CommentController.java, CommentOperations.java : add new method skeleton